Test unstable in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ sudo: false
 before_script:
   - pip install 'travis-cargo<0.2' --user && export PATH=$HOME/.local/bin:$PATH
 script:
-  - cargo test
+  - travis-cargo test # uses `--features unstable` on nightly
   - cargo doc --no-deps
 after_success:
   - travis-cargo --only nightly doc-upload
